Update getJobs + add getJobsWithFilter
