# ReactApp1.Server/swagger.json
@@ -16,16 +16,6 @@
           "application/json",
           "text/json"
         ],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "jobTags",
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -37,12 +27,16 @@
             }
           }
         }
-      }
-    },
-    "/jobs/GetJobsWithFilter": {
-      "get": {
+      },
+      "post": {
         "tags": [
           "JobsListing"
+        ],
+        "operationId": "GetJobsWithFilter",
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
         ],
         "produces": [
           "text/plain",
@@ -51,17 +45,24 @@
         ],
         "parameters": [
           {
-            "in": "query",
-            "name": "id",
-            "type": "integer",
-            "format": "int32"
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "Success",
             "schema": {
-              "type": "string"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Job"
+              }
             }
           }
         }
